# user-signal-mining-agents

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: integration-gates.yml  live-smoke.yml  nightly-tests.yml  pr-tests.yml
docs/: KNOWN_LIMITATIONS.md
docs/concurrent_agents/: README.md  acceptance-foundation-contracts-gates.md  acceptance-p9-robustness-suite.md  acceptance-report-template.md  agent-0-foundation-contracts-gates.md  agent-1-p1-multi-source-ingestion.md  agent-2-p3-retrieval-stack-v2.md  agent-3-p6-multi-judge-panel.md  agent-4-p7-failure-taxonomy.md  agent-5-p9-robustness-suite.md  agent-6-p10-domain-transfer-acceptance.md  agent-6-p10-domain-transfer.md  agent-7-reco-interfaces-tests-ci-gates.md  ci-gate-policy.md  integration-gates.md
founder_prompts/: domain_packs.json  ecommerce.json  restaurants.example.json  restaurants.json  saas.json
paper/: final_report.md
prompts/: baseline.md  counterevidence_miner.md  critic.md  evidence_verifier.md  intent.md  judge.md  query_planner.md  refiner.md  synthesis.md
reports/: experiment_log.md  nikil_design_progress_2026-03-13.md
reports/final_analysis/: final_analysis_report.md  final_analysis_summary.json
reports/human_annotation/: README.md
reports/research_upgrade/: README.md  retrieval_eval_report.md  retrieval_eval_summary.json
scripts/: README.md  build_index.py  build_yelp_subset.py  generate_paper_figures.py  setup_concurrent_worktrees.ps1
scripts/ci/: check_metric_guardrails.py  run_research_gate.py
src/user_signal_mining_agents/: __init__.py  cli.py  config.py  console.py  domain_packs.py  llm_client.py  schemas.py
tests/: conftest.py
tests/fixtures/: businesses.jsonl  founder_prompts.json  reviews.jsonl
tests/integration/: test_ingestion_flow.py  test_offline_flow.py
tests/unit/: test_agents_baseline.py  test_agents_evidence_filter.py  test_agents_intent.py  test_agents_judge_pipeline.py  test_agents_synthesis_verifier.py  test_agents_variant_pipeline.py  test_chunking.py  test_cli.py  test_cli_contract_regressions.py  test_config.py  test_data_ingestion.py  test_domain_packs.py  test_evaluation_gates.py  test_evaluation_retrieval.py  test_evaluation_robustness_runner.py  test_evaluation_runner_report_sweep.py  test_evaluation_variant_runner.py  test_failure_taxonomy.py  test_fetch_yelp.py  test_final_analysis.py  test_foundation_contracts.py  test_human_annotation_analysis.py  test_human_annotation_gui.py  test_integration_gates.py  test_llm_client.py  (+4 more)
(+43 files in other folders)
