[project]
name = "user-signal-mining-agents"
version = "0.1.0"
description = "Founder-grounded review mining experiments for surfacing actionable focus points from user reviews."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "openai>=1.82.0",
    "sentence-transformers>=5.2.3",
    "torch==2.10.0+cu130",
    "torchvision==0.25.0+cu130",
    "rich>=14.3.3",
]

[project.scripts]
usm = "user_signal_mining_agents.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["src/user_signal_mining_agents"]

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "integration: offline integration tests",
    "live: tests that require live external services",
]

[tool.coverage.run]
source = ["user_signal_mining_agents"]
branch = true
omit = [
    "*/user_signal_mining_agents/__main__.py",
    "*/user_signal_mining_agents/evaluation/sample_annotations.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
